--- a/package.json
+++ b/package.json
@@ -98,9 +98,11 @@
     "tsup": "^8.3.5"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.18",
+    "@types/express": "^4.17.22",
+    "@types/http-errors": "^2.0.4",
     "@types/json-schema": "^7.0.15",
     "@types/mime": "^4.0.0",
     "@types/mime-types": "^2.1.4",
@@ -108,6 +110,11 @@
     "@types/node-cron": "^3.0.11",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode-terminal": "^0.12.2",
+    "@types/qs": "^6.14.0",
+    "@types/range-parser": "^1.2.7",
+    "@types/semver": "^7.7.0",
+    "@types/send": "^0.17.4",
+    "@types/serve-static": "^1.15.7",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
